# isostatic

./: .gitignore  Cargo.nix  Cargo.toml  default.nix  readme.md  shell.nix
nix/: nixpkgs.nix  sources.json
src/: cli.rs  db.rs  main.rs  service.rs
