[package]
name = "hedge"
version = "0.1.0"
authors = ["Akshay <nerdy@peppe.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
rusqlite = "0.24.0"
nanoid = "0.3.0"
url = "2.1.1"
anyhow = "1.0"
multer = "1.2"


[dependencies.smol]
version = "0.3.3"
features = [ "tokio02" ]
