[package]
name = "hedge"
version = "0.1.0"
authors = ["Akshay <nerdy@peppe.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
rusqlite = "0.24.0"
nanoid = "0.3.0"
url = "2.1.1"
anyhow = "1.0"
multer = "1.2"
log = "0.4"
pretty_env_logger = "0.4.0"
pico-args = "0.3.4"
lazy_static = "1.4.0"


[dependencies.smol]
version = "0.3.3"
features = [ "tokio02" ]
